<resources>
    <string name="app_name">marks calculator</string>
    <string name="stitle">students marks calculation</string>
    <string name="stname">students name</string>
    <string name="marks1">marks 1</string>
    <string name="marks2">marks 2</string>
    <string name="marks3">marks 3</string>
    <string name="total">Total</string>
    <string name="average">avg</string>
    <string name="grade">grade</string>

    <string name="ok">ok</string>
    <string name="clear">clear</string>
</resources>